makes description clearer

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "npmweb/pagedown-ace",
-    "description": "PageDown ACE with a Composer Components config file",
+    "description": "Markdown editor with live preview",
     "type": "component",
     "repositories": [
         { "type": "vcs", "url": "git@github.com:npmweb/ace" }
